--- a/style.css
+++ b/style.css
@@ -468,8 +468,7 @@ p.daily-tasks {
 
     p.t-text {
         font-weight: bolder;
-        font-family: monospace;
-        font-size: 18px;
+        font-size: 15px;
         align-items: center;
         display: flex;
         text-align: center;
@@ -480,7 +479,7 @@ p.daily-tasks {
     align-items: center;
     justify-content: center;
     display: flex;
-    font-size: 11px;
+    font-size: 10px;
     text-align: center;
     color: #fff;
     font-weight: bold;
@@ -512,7 +511,7 @@ p.daily-tasks {
 .task-text {
     font-weight: bolder;
     font-family: monospace;
-    font-size: 20px;
+    font-size: 15px;
     align-items: center;
     display: flex;
     text-align: center;
@@ -526,7 +525,8 @@ p.daily-tasks {
 }
 
 
-.task button {
+.task button,
+.task button a {
     width: 40px;
     height: 23px;
     border-radius: 25%;
@@ -565,10 +565,15 @@ p.daily-tasks {
 
 
 /*Level page styling begins*/
+.level-body {
+    background-color: #000;
+    height: calc(100vh - 50px);
+    width: 100vw;
+    overflow-y: scroll;
+}
+
 .level-page {
     width: 100vw;
-    height: calc(100vh - 50px);
-    overflow-y: scroll;
 }
 
 .level-container {
@@ -581,7 +586,7 @@ p.daily-tasks {
 }
 
 .lvl-title {
-    background-color: #000000;
+    background-color: #ffffff;
     border-radius: 20px;
     height: 30px;
     width: 40%;
@@ -597,7 +602,7 @@ p.daily-tasks {
 }
 
 .lvl-bullet {
-    background-color: #fff;
+    background-color: #020202;
     border-radius: 50%;
     width: 12px;
     height: 12px;
@@ -605,6 +610,7 @@ p.daily-tasks {
 
 .lvl-title p {
     font-weight: bold;
+    color: #000;
 }
 
 .level-cancel {
@@ -628,7 +634,7 @@ p.daily-tasks {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 290px;
+    height: 260px;
     border-radius: 10px;
     margin-bottom: 10px;
     gap: 5px;
@@ -672,24 +678,22 @@ p.daily-tasks {
 }
 
 .upgrade-btn button {
-    width: 90%;
-    margin-bottom: 3px;
-    margin-left: 6px;
-}
-
-.upgrade-btnn {
-    width: 100%;
-    border-radius: 30px;
-    padding: 2px 10px;
-    font-weight: bold;
+    background-color: #000;
+    padding: 3px 5px;
+    font-size: 10px;
+    border-radius: 10px;
+    margin-bottom: 8px;
     border: none;
+    outline: none;
 }
 
 .Bypass-btn button {
-    font-size: 5px;
+    font-size: 10px;
     border: none;
-    padding: 2px 5px;
+    outline: none;
+    padding: 3px 5px;
     border-radius: 15px;
+    background-color: #000;
 }
 
 .requirement {
@@ -702,6 +706,7 @@ p.daily-tasks {
 .requirement1,
 .requirement2 {
     display: flex;
+    flex-direction: row;
     gap: 2px;
     font-size: 9px;
     align-items: center;
@@ -714,6 +719,10 @@ p.daily-tasks {
     font-size: 8px;
     align-items: center;
     margin-bottom: 5px;
+}
+
+progress {
+    width: 100%;
 }
 
 /*Level page styling ends*/
@@ -782,7 +791,7 @@ p.daily-tasks {
 }
 
 .invites-coin {
-    margin-bottom: 15px;
+    margin: 10px 0;
 }
 
 
@@ -828,7 +837,7 @@ p.daily-tasks {
     display: flex;
     align-items: center;
     gap: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .invite-profile-img {
@@ -851,8 +860,9 @@ p.daily-tasks {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    font-size: 18px;
     padding-bottom: 7px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 2px solid #fff;
 }
 
 .invite-link {
@@ -1031,6 +1041,7 @@ p.daily-tasks {
     border-radius: 20px;
     border: none;
     cursor: pointer;
+    background-color: #000;
 }
 
 .promo-link {
@@ -1137,12 +1148,12 @@ button {
 
 /*Update page styling beginds*/
 .update-body {
-    background-color: #363636;
+    background-color: #000;
     padding: 7px 0;
 }
 
 .update-container-box {
-    background-color: #363636;
+    background-color: #000;
     height: calc(100vh - 50px);
     overflow-y: scroll;
 }
@@ -1176,16 +1187,13 @@ button {
     margin-bottom: 15px;
 }
 
-.update-notice-text {
-    background-color: #5b5c5b;
+.update-notice-box {
     width: 200px;
     text-align: center;
     height: 40px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
-    padding: 0 10px;
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: #5b5c5b;
 }
 
 .updates-big {
@@ -1398,7 +1406,7 @@ button {
     .update-notice-text {
         background-color: #5b5c5b;
         width: 180px;
-        padding: 5px 0;
+        padding: 4px 0;
     }
 
     .updates-big {
@@ -1415,6 +1423,21 @@ button {
 
     .verify-notice p {
         font-size: 10px;
+    }
+
+    .footer-box1 {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .level {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .level-name {
+        display: flex;
+        flex-direction: row;
     }
 }
 
