--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ body {
     background-color: rgb(0, 0, 0);
     width: 100%;
     height: 100vh;
+    overflow: scroll;
 }
 
 .header {
@@ -623,7 +624,12 @@ p.daily-tasks {
 }
 
 .level-container {
-    margin: 30px 20px 20px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+
 }
 
 .level-header {
@@ -644,7 +650,7 @@ p.daily-tasks {
     position: relative;
     top: 0%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 40%);
 }
 
 .lvl-bullet {
@@ -677,30 +683,49 @@ p.daily-tasks {
 }
 
 .level-box {
-    display: flex;
-    justify-content: space-between;
     width: 100%;
     height: 260px;
     border-radius: 10px;
     margin-bottom: 10px;
     gap: 5px;
-
 }
 
 .level-box p {
     color: #000;
 }
 
-.level-box1 {
+.level-item {
     width: 100%;
     background-color: rgb(206, 206, 206);
     border-radius: 8px;
     height: 100%;
 }
 
-.level-box1 img {
+.level-item img,
+.level-cover img {
+    height: 50%;
     width: 100%;
-    height: 50%
+}
+
+.level-cover {
+    width: 100%;
+    background-color: rgb(206, 206, 206);
+    border-radius: 8px;
+    height: 100%;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.locked {
+    display: none;
+}
+
+.lvlbox-info {
+    text-align: center;
+}
+
+.lvlbox-info p {
+    font-size: 12px;
+    font-weight: 800;
 }
 
 .lvlbox-text {
@@ -817,17 +842,24 @@ p.daily-tasks {
 }
 
 .invites-upgrade {
-    display: flex;
-    background-color: #b1b3b0;
-    justify-content: space-between;
-    padding: 4px 10px;
-    border-radius: 20px;
+
     font-size: 13px;
     font-weight: bolder;
     align-items: center;
     text-align: center;
     margin: 0 5px;
     margin-bottom: 10px;
+}
+
+.invites-upgrade button {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    padding: 4px 10px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
 }
 
 .invites-coin {
@@ -983,7 +1015,7 @@ p.daily-tasks {
     background-position: center;
     background-size: cover;
     object-fit: cover;
-    height: 250px;
+    height: 230px;
     width: 100vw;
 }
 
@@ -1007,7 +1039,7 @@ p.daily-tasks {
     outline: none;
 }
 
-.opt {
+#opt1 {
     text-decoration: underline;
 }
 
@@ -1022,7 +1054,7 @@ p.daily-tasks {
     display: block;
 }
 
-#taskComplete {
+#completedTasks {
     display: none;
 }
 
@@ -1158,13 +1190,15 @@ button {
 .modal {
     display: none;
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 
 .modal-content {
