--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 
 a {
@@ -272,6 +271,7 @@ progress::-webkit-progress-value {
     border-radius: 15px;
     border-top-right-radius: 15px;
     display: flex;
+    min-height: 120px;
     flex-direction: row;
     justify-content: space-between;
     box-shadow: 0px 0px 0px 3px rgba(255, 255, 255, 0.87) inset;
@@ -438,7 +438,7 @@ progress::-webkit-progress-value {
     justify-content: space-between;
     position: fixed;
     width: 100vw;
-    height: 50px;
+    min-height: 50px;
     background-color: #000;
     bottom: 0;
     color: white;
@@ -1623,6 +1623,7 @@ button {
         border-top-right-radius: 15px;
         display: flex;
         flex-direction: row;
+        min-height: 120px;
         justify-content: space-between;
         box-shadow: 0px 0px 0px 3px rgba(255, 255, 255, 0.87) inset;
         gap: 5px;
@@ -1678,18 +1679,21 @@ button {
     .footer {
         background-color: rgba(0, 0, 0, 0.918);
         display: flex;
+        display: -webkit-flex;
         flex-direction: row;
         gap: 10px;
         justify-content: space-between;
         position: fixed;
         width: 100vw;
-        height: 50px;
+        min-height: 50px;
         background-color: #000;
         bottom: 0;
         color: white;
 
         .footer-box1 {
+            display: -webkit-flex;
             display: flex;
+            flex-direction: row;
             width: 30%;
             gap: 10px;
             margin: 5px 10px;
