--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ body {
 }
 
 .header {
-    padding: 15px 15px;
+    padding: 7px 9px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -222,11 +222,11 @@ body {
 
         .level-name {
             display: flex;
-            gap: 7px;
+            gap: 5px;
             align-items: center;
 
             i {
-                font-size: 10px;
+                font-size: 20px;
                 color: #fff;
             }
         }
@@ -236,6 +236,7 @@ body {
         }
     }
 
+    /* 
     .progress-gradient {
         margin-top: 5px;
         width: 100%;
@@ -250,7 +251,11 @@ body {
             background-color: #fff;
             border-radius: 15px;
         }
-    }
+    } */
+}
+
+.progress-area {
+    margin-bottom: 5px;
 }
 
 progress {
@@ -277,15 +282,16 @@ progress::-webkit-progress-value {
     background-color: rgba(24, 21, 1, 0.74);
     border-radius: 15px;
     display: flex;
-    min-height: 120px;
+    min-height: 100px;
 }
 
 .box {
     background-color: rgba(209, 202, 202, 0.582);
-    height: 100px;
+    height: 80px;
     text-align: center;
     align-items: center;
     width: calc(33.33% - 5px);
+    border-radius: 10px;
 }
 
 .bullet {
@@ -319,7 +325,7 @@ progress::-webkit-progress-value {
 .daily-title a {
     font-size: 15px;
     position: relative;
-    top: 20px;
+    top: 8px;
     left: 5px;
     margin-bottom: 5px;
 }
@@ -329,10 +335,10 @@ progress::-webkit-progress-value {
 }
 
 .box p {
-    margin-top: 5px;
-    font-size: 12px;
+    margin-top: 2px;
+    font-size: 10px;
     position: relative;
-    top: 12px;
+    /* top: 3px; */
     left: 5px;
 }
 
